--- a/star-local/build.gradle
+++ b/star-local/build.gradle
@@ -28,3 +28,16 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "androidx.annotation:annotation:$annotationVersion"
 }
+
+apply from: 'https://raw.githubusercontent.com/xujiaji/gradle-tools/master/bintray.gradle'
+apply from: 'https://raw.githubusercontent.com/xujiaji/gradle-tools/master/install.gradle'
+javadoc {
+    options{
+        encoding "UTF-8"
+        charSet 'UTF-8'
+        author true
+        version true
+        links "https://github.com/xujiaji/Starry"
+        title "StarLocal Doc"
+    }
+}
